Fixing bug with rank alignment

--- a/Chess.Web/ClientApp/css/site.css
+++ b/Chess.Web/ClientApp/css/site.css
@@ -1,3 +1,8 @@
+.rank {
+    display: flex;
+    align-items: stretch;
+}
+
 .square {
     width: 100px;
     height: 100px;
